--- a/preparation/index.html
+++ b/preparation/index.html
@@ -9,9 +9,13 @@
   <body>
     <!-- <h1 id="myH1"></h1>
   <p id="myP"></p> -->
-    <p id="p1"></p>
+    <!-- <p id="p1"></p>
     <p id="p2"></p>
-    <p id="p3"></p>
+    <p id="p3"></p> -->
+    <!-- <h1 id="myH1">welcome</h1>
+        <label>username :</label>
+    <input type="text" id="myTexte"><br>
+    <button id="mySubmit">submit</button> -->
 
     <script src="index.js"></script>
   </body>
