--- a/preparation/index.html
+++ b/preparation/index.html
@@ -9,14 +9,41 @@
   <body>
     <!-- <h1 id="myH1"></h1>
   <p id="myP"></p> -->
-    <!-- <p id="p1"></p>
+   
+  
+  <!-- <p id="p1"></p>
     <p id="p2"></p>
     <p id="p3"></p> -->
+   
+   
     <!-- <h1 id="myH1">welcome</h1>
         <label>username :</label>
     <input type="text" id="myTexte"><br>
     <button id="mySubmit">submit</button> -->
 
-    <script src="index.js"></script>
+        <h1 id="myH1">entrer the radius of a circle</h1>
+        
+        <label>radius :</label>
+        <input type="text" id="mytexte"><br>
+        <button id="mySubmit">submit</button>
+        <h3 id="myH3"></h3>
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+   
+        <script src="index.js"></script>
   </body>
 </html>
